--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
       integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
       crossorigin="anonymous"
     />
+    <title>RWD4: PRODUCT LANDING PAGE</title>
   </head>
 
   <body data-new-gr-c-s-check-loaded="14.1199.0" data-gr-ext-installed="">
